--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,26 +23,58 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_gravity="center_horizontal"
                 android:id="@+id/ifProfile"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_margin="10dp"
                 android:src="@drawable/logo"
-                app:civ_border_width="2dp"
                 app:civ_border_color="#000"
+                app:civ_border_width="2dp"
                 app:civ_circle_background_color="#C16969" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5sp"
                 android:layout_marginBottom="5sp"
                 android:text="Armandino"
-                />
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="1" />
+
+            <TextView
+                android:id="@+id/idTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="9,5"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/idSha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_share" />
+
+            <ImageView
+                android:id="@+id/idFav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_favorite_border" />
+
+            <ImageView
+                android:id="@+id/idBoo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_bookmark" />
+
 
         </LinearLayout>
 
