--- a/app/src/main/res/layout/paises_layout.xml
+++ b/app/src/main/res/layout/paises_layout.xml
@@ -8,6 +8,160 @@
     android:layout_margin="10dp"
     tools:context=".PaisesActivity">
 
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/idCardView1"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#AB58C1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/idProfile1"
+                android:layout_width="100dp"
+                android:layout_height="150dp"
+                android:layout_gravity="left"
+                android:layout_margin="10dp"
+                android:src="@drawable/logo2"
+                android:tint="@color/black"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="-120sp"
+                android:layout_marginBottom="5sp"
+                android:text="France"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="5sp"
+                android:text="Paris"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+
+
+        </LinearLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/idCardView2"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="210dp"
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FF5722"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/idProfile2"
+                android:layout_width="100dp"
+                android:layout_height="150dp"
+                android:layout_gravity="left"
+                android:layout_margin="10dp"
+                android:src="@drawable/logo3"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="-120sp"
+                android:layout_marginBottom="5sp"
+                android:text="Usa"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="5sp"
+                android:text="New York"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/idCardView3"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="420dp"
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#47C3B5"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/idProfile3"
+                android:layout_width="100dp"
+                android:layout_height="150dp"
+                android:layout_gravity="left"
+                android:layout_margin="10dp"
+                android:src="@drawable/logo4"
+
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="-120sp"
+                android:layout_marginBottom="5sp"
+                android:text="England"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="5sp"
+                android:text="London"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 </RelativeLayout>
